--- a/style.css
+++ b/style.css
@@ -63,6 +63,7 @@ div.titulo {
     margin: auto;
     justify-content: center;
     border-radius: 5px;
+    font-family: 'Yanone Kaffeesatz', sans-serif;
 }
 
 
